--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeslyn Loli</title>
+    <title>Jeslyn Namie</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="imagenes/logo chiquito.png" type="image/x-icon">
     <meta name="google-site-verification" content="6d6HbXAx6FVqACtBAXk2F1Ca7S7yn1d1S4VyPFz2DT4"/>
