--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Jeslyn Namie</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="imagenes/logo chiquito.png" type="image/x-icon">
+    <meta name="description" content="Jeslyn Namie. Es una página imitando el campus online de SENATI como práctica del curso de DISEÑO WEB "/>
     <meta name="google-site-verification" content="6d6HbXAx6FVqACtBAXk2F1Ca7S7yn1d1S4VyPFz2DT4"/>
 </head>
 
