--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeslyn Namie</title>
+    <title>Jeslyn Namie Lo</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="imagenes/logo chiquito.png" type="image/x-icon">
     <meta name="google-site-verification" content="6d6HbXAx6FVqACtBAXk2F1Ca7S7yn1d1S4VyPFz2DT4"/>
     <meta property="og:image" content="https://jeslynnamielo.github.io/imagenes/senati-jeslyn.png" />
     <meta property="og:url" content="https://jeslynnamielo.github.io/" />
     <meta property="og:title" content="Mi campus online SENATI 2024" />
-    <meta name="description" content="Jeslyn Namie. Es una página imitando el campus online de SENATI como práctica del curso de DISEÑO WEB "/>    
+    <meta name="description" content="Jeslyn Namie Lo. Es una página imitando el campus online de SENATI como práctica del curso de DISEÑO WEB "/>    
         
 </head>
 
