--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
     <meta property="og:url" content="https://jeslynnamielo.github.io/" />
     <meta property="og:title" content="Mi campus online SENATI 2024" />
     <meta name="description" content="Jeslyn Namie Lo. Es una página imitando el campus online de SENATI como práctica del curso de DISEÑO WEB "/>    
-        
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EGRJG3CFTZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EGRJG3CFTZ');
+</script>
 
 <body>
     <header>
