cambio de imagenes

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <section id="centro">
             <div class="centro">
                 <a href="https://campusonline.senati.edu.pe/preguntas_frecuentes.pdf" target="_blank" rel="noopener noreferrer">
-                    <img src="imagenes/PREGUNTAS.jpg" alt="pie de pagina" width="1432" height="191">
+                    <img src="imagenes/PREGUNTAS_11zon.webp" alt="pie de pagina" width="1432" height="191">
                 </a>
                     
                 
@@ -207,7 +207,7 @@
             <div class="campus">
                 <div class="campus container grid-2">
                     <div class="imagen centro">
-                        <img src="imagenes/senati-uno.jpg" alt="imagen costado" width="800px"
+                        <img src="imagenes/senati-uno_11zon.webp" alt="imagen costado" width="800px"
                             height="303px">
                     </div>
                     <div class="campus-texto">
@@ -318,7 +318,7 @@
     <section id="chatwp">
         <div class="whatsapp" id="whatsapp">
             <a href="https://wa.me/51950925447/?text=hola+quiero+mas+informacion">
-                <img src="imagenes/wha.png" alt="wsp" width="512px" height="512px">
+                <img src="imagenes/wha_11zon.webp" alt="wsp" width="512px" height="512px">
             </a>
         </div>
     </section>
