--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <li><a href="https://www.senati.edu.pe/especialidades">ESPECIALIDADES</a></li>
                         <li><a href="https://www.senati.edu.pe/content/tech-senati">POSTGRADO</a></li>
                     </ul>        
-                    <a href="http://" class="bt-postular">
+                    <a href="https://admisionsenati.com/?utm_source=search&utm_medium=cpl&utm_campaign=ADMISION202410_brand_limaycallao&utm_content=rsa_senati&gad_source=1&gclid=EAIaIQobChMI7Zm24rmDhQMV2UVIAB1AxQyZEAAYASACEgIiAPD_BwE" class="bt-postular">
                     <button type="button" class="btn1">POSTULAR</button>
                 </a>
                 </nav>
