--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <section id="centro">
             <div class="centro">
                 <a href="https://campusonline.senati.edu.pe/preguntas_frecuentes.pdf" target="_blank" rel="noopener noreferrer">
-                    <img src="imagenes/PREGUNTAS_11zon.webp" alt="pie de pagina" width="1432" height="191">
+                    <img src="imagenes/preguntas para movil.webp" alt="pie de pagina" width="1432" height="191">
                 </a>
                     
                 
