--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <div class="header container">
             <img class="logotipo1" src="imagenes/SENATI LOGO.png" alt="logo blanco de senati" width="455px" height="128px">
             <button id="abrir" class="abrir-menu">
-                <img src="imagenes/menu.svg" alt="" width="150px" height="150px">
+                <img src="imagenes/menu.svg" alt="boton abrir senati" width="150px" height="150px">
             </button>
             <div id="menu" class="menu">
                     <div class="header2">
                     <img class="logotipo2" src="imagenes/SENATI LOGO.png" alt="logo blanco de senati" width="455px" height="128px">
                     <button id="cerrar" class="cerrar-menu">
-                        <img src="imagenes/cerrar.svg" alt="" width="150px" height="150px">
+                        <img src="imagenes/cerrar.svg" alt="boton cerrar senati" width="150px" height="150px">
                     </button>
 
 
