--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
     </section>
 
     <script src="JS/main.js"></script>
+    <script>function loadScript(a){var b=document.getElementsByTagName("head")[0],c=document.createElement("script");c.type="text/javascript",c.src="https://tracker.metricool.com/resources/be.js",c.onreadystatechange=a,c.onload=a,b.appendChild(c)}loadScript(function(){beTracker.t({hash:"73f7a41cd5b7296a0b3c8a8ade602d93"})});</script>        
 
 </body>
 
